--- a/vanilla/random Number/src/styles.css
+++ b/vanilla/random Number/src/styles.css
@@ -1,20 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;900&family=Poor+Story&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;900&family=Poor+Story&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: 'Overpass', sans-serif,'Poor Story', cursive;
-  height: 50vh;
+  font-family: "Overpass", sans-serif, "Poor Story", cursive;
+  height: 100vh;
   padding: 30px;
   text-align: center;
+  display: grid;
+  place-content: center;
 }
+.random-game-wrap {
+  height: fit-content;
+}
+
 h1 {
   font-size: 3em;
 }
 
-h3{
+h3 {
   font-weight: 500;
   font-size: 1.4em;
 }
@@ -23,7 +29,7 @@ h3{
   padding: 30px 0;
 }
 
-#rangeInput{
+#rangeInput {
   width: 300px;
 }
 #js-num-form {
@@ -42,7 +48,7 @@ h3{
   background-color: rgba(100, 100, 100, 0.322);
   width: 70px;
   height: 30px;
-  padding-left:5px;
+  padding-left: 5px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -59,22 +65,22 @@ button {
   border-bottom-right-radius: 10px;
 }
 button:hover {
-  background-color:  rgb(63, 205, 110);
+  background-color: rgb(63, 205, 110);
 }
 input:focus,
-button:focus{
+button:focus {
   outline: none;
 }
 
 .warn {
   color: rgba(196, 92, 7, 0.774);
   font-weight: bold;
-  font-size:2em ;
-  font-family: 'Poor Story';
+  font-size: 2em;
+  font-family: "Poor Story";
 }
 
 .playing,
-.result{
+.result {
   font-size: 3em;
 }
 
