--- a/vanilla/todoList/src/styles.css
+++ b/vanilla/todoList/src/styles.css
@@ -1,47 +1,92 @@
-*{margin: 0; padding: 0;}
+*{margin: 0; padding: 0; box-sizing: border-box;}
 body {
   font-family: sans-serif;
   text-align: center;
   padding: 20px;
-  height: 60vh;
+  height: 100vh;
 }
 
-form {
-  padding-bottom: 20px;
+
+h1 {
+  margin-bottom: 10px;
 }
+
 input {
   border: none;
-  background-color: rgba(83, 83, 83, 0.597);
+  background-color: rgba(0, 0, 0, 0.597);
   width: 500px;
   padding: 10px 20px;
   font-size: 1.6em;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 input::placeholder {
-  color: white;
+  color: rgb(255, 255, 255);
 }
-.todo-wrap {
-  padding: 30px;
+input:focus{
+  outline: none;
+}
+
+li {list-style: none;}
+
+/* ---------------------------------------------------------------- */
+.todo-list-wrap {
+  position: relative;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  height: 100%;
+  grid-template-rows: max-content auto;
+  justify-items: center;
+}
+
+.random-img {
+  position: absolute;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
+.random-img > img{
+  height: 100%;
+  opacity: .4;
+}
+
+header {
+  top: 30px;
+  color: rgb(0, 0, 0);
+  margin: 20px;
+}
+
+.todo-wrap {
+  display: grid;
+  overflow: hidden; 
+  min-width: 903px;
+  width: 70%;
+  height: 96%;
+  grid-template-columns: repeat(2, 1fr);
+  overflow: hidden;
+  gap: 30px;
 }
 .todo-wrap > div {
-  padding: 20px;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.698);
+  height: 100%;
+  border-radius: 10px;
+  width: 100%;
+  display: grid;
+  grid-template-rows: max-content 1fr;
+  row-gap: 20px;
 }
-h2 {
-  padding-bottom: 30px;
-}
-.todo-wrap > div li {
-  list-style: none;
+
+
+ul > li  {
   display: grid;
   grid-template-columns: 1fr repeat(2,40px);
   text-align: left;
   border-bottom: 1px solid rgba(128, 128, 128, 0.329);
   padding: 0 0 7px 3px;
+  padding: 20px 0 10px;
 }
-.todo-wrap > div li + li {
-  margin-top: 10px;
-}
+
 button {
   width: 28px;
   height: 28px;
@@ -53,6 +98,7 @@ button {
   opacity: .5;
   color: white;
 }
+
 button:focus,input:focus{
   outline: none;
 }
@@ -68,4 +114,3 @@ button:hover {
 .return {
   background-color: rgba(111, 139, 46, 0.705);
 }
-.todo-wrap  > div + div {border-left: 1px solid rgba(128, 128, 128, 0.199);}
